# judger-core

./: .gitignore  CMakeLists.txt  README.md
demo/: demo.py  main.c
src/: arg_getopt.h  argtable3.c  argtable3.h  argtable3_private.h
wrapper/: _judger.c  setup.py
